<resources>
    <string name="app_name">MatematicaMENTE</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="name_example">Name Example</string>
    <string name="algebra">Algebra</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trigonometría">Trigonometría</string>
    <string name="geometria_analitica">Geometría analítica</string>
    <string name="calculo_diferencial">Cálculo Diferencial</string>
    <string name="calculo_integral">Cálculo Integral</string>
    <string name="estadistica">Estadística</string>
    <string name="close_session">Cerrar sesión</string>
</resources>
